--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,6 +1,6 @@
 #SQL Properties
 db.driver = com.mysql.jdbc.Driver
-db.url = jdbc:mysql://localhost:3306/ims?createDatabaseIfNotExist=true&autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+db.url = jdbc:mysql://ims-mysql:3306/ims?createDatabaseIfNotExist=true&autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 db.username = root
 db.password = Welcome123
 
