--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,7 +1,7 @@
 #SQL Properties
 db.driver = com.mysql.jdbc.Driver
-db.url = jdbc:mysql://ims-mysql:3306/ims?createDatabaseIfNotExist=true&autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-db.username = root
+db.url = jdbc:mysql://azure-devops-mysql.mysql.database.azure.com:3306/ims?createDatabaseIfNotExist=true&autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+db.username = devops_root@azure-devops-mysql
 db.password = Welcome123
 
 #Hibernate Properties
